tests/integration/snapshots/main__integration__subcommand__unknown_subcommand_error.snap
---
source: tests/integration/subcommand.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: unexpected argument: unknown
   ╭─[ <cli>:1:1 ]
   │
 1 │ unknown
   │ ───┬───  
   │    ╰───── unexpected argument: unknown
───╯
